@@ -888,11 +888,12 @@ static int p;
 static maclist_t *zeigermac;
 
 if(fh_deviceinfo == NULL) return;
+qsort(aplist, aplistptr -aplist, MACLIST_SIZE, sort_maclist_by_manufacturer);
 for(zeigermac = aplist; zeigermac < aplistptr; zeigermac++)
 	{
-	if((zeigermac->manufactorer[0] == 0) && (zeigermac->model[0] == 0) && (zeigermac->serialnumber[0] == 0) && (zeigermac->devicename[0] == 0)) continue;
+	if((zeigermac->manufacturer[0] == 0) && (zeigermac->model[0] == 0) && (zeigermac->serialnumber[0] == 0) && (zeigermac->devicename[0] == 0)) continue;
 	for(p = 0; p< 6; p++) fprintf(fh_deviceinfo, "%02x", zeigermac->addr[p]);
-	fwritedeviceinfostr(zeigermac->manufactorerlen, zeigermac->manufactorer, fh_deviceinfo);
+	fwritedeviceinfostr(zeigermac->manufacturerlen, zeigermac->manufacturer, fh_deviceinfo);
 	fwritedeviceinfostr(zeigermac->modellen, zeigermac->model, fh_deviceinfo);
 	fwritedeviceinfostr(zeigermac->serialnumberlen, zeigermac->serialnumber, fh_deviceinfo);
 	fwritedeviceinfostr(zeigermac->devicenamelen, zeigermac->devicename, fh_deviceinfo);
@@ -2692,12 +2693,11 @@ if(wpslen < (int)WPSIE_SIZE) return true;
 zeiger->wpsinfo = 1;
 while(0 < wpslen)
 	{
-	if(wpslen == 4) return true;
 	wpsptr = (wpsie_t*)tagptr;
 	if((ntohs(wpsptr->type) == WPS_MANUFACTURER) && (ntohs(wpsptr->len) > 0)  && (ntohs(wpsptr->len) < (DEVICE_INFO_MAX -1)))
 		{
-		zeiger->manufactorerlen = ntohs(wpsptr->len);
-		memcpy(zeiger->manufactorer, wpsptr->data, zeiger->manufactorerlen);
+		zeiger->manufacturerlen = ntohs(wpsptr->len);
+		memcpy(zeiger->manufacturer, wpsptr->data, zeiger->manufacturerlen);
 		}
 	if((ntohs(wpsptr->type) == WPS_MODELNAME) && (ntohs(wpsptr->len) > 0)  && (ntohs(wpsptr->len) < (DEVICE_INFO_MAX -1)))
 		{
@@ -2717,7 +2717,7 @@ while(0 < wpslen)
 	tagptr += ntohs(wpsptr->len) +WPSIE_SIZE;
 	wpslen -= ntohs(wpsptr->len) +WPSIE_SIZE;
 	}
-if((wpslen != 0) && (wpslen != 4)) return false;
+if(wpslen != 0) return false;
 return true;
 }
 /*===========================================================================*/
@@ -4042,8 +4042,8 @@ memcpy(aplistptr->essid, tags.essid, tags.essidlen);
 aplistptr->groupcipher = tags.groupcipher;
 aplistptr->cipher = tags.cipher;
 aplistptr->akm = tags.akm;
-aplistptr->manufactorerlen = tags.manufactorerlen;
-memcpy(aplistptr->manufactorer, tags.manufactorer, tags.manufactorerlen);
+aplistptr->manufacturerlen = tags.manufacturerlen;
+memcpy(aplistptr->manufacturer, tags.manufacturer, tags.manufacturerlen);
 aplistptr->modellen = tags.modellen;
 memcpy(aplistptr->model, tags.model, tags.modellen);
 aplistptr->serialnumberlen = tags.serialnumberlen;
@@ -4146,8 +4146,8 @@ memcpy(aplistptr->essid, tags.essid, tags.essidlen);
 aplistptr->groupcipher = tags.groupcipher;
 aplistptr->cipher = tags.cipher;
 aplistptr->akm = tags.akm;
-aplistptr->manufactorerlen = tags.manufactorerlen;
-memcpy(aplistptr->manufactorer, tags.manufactorer, tags.manufactorerlen);
+aplistptr->manufacturerlen = tags.manufacturerlen;
+memcpy(aplistptr->manufacturer, tags.manufacturer, tags.manufacturerlen);
 aplistptr->modellen = tags.modellen;
 memcpy(aplistptr->model, tags.model, tags.modellen);
 aplistptr->serialnumberlen = tags.serialnumberlen;
@@ -5502,7 +5502,8 @@ printf("%s %s (C) %s ZeroBeat\n"
 	"            retrieved from PROBEREQUEST frames only\n"
 	"-I <file> : output unsorted identity list to use as input wordlist for cracker\n"
 	"-U <file> : output unsorted username list to use as input wordlist for cracker\n"
-	"-D <file> : output unsorted device information list\n"
+	"-D <file> : output device information list\n"
+	"            format MAC MANUFACTURER MODELNAME SERIALNUMBER DEVICENAME\n"
 	"-h        : show this help\n"
 	"-v        : show version\n"
 	"\n"
